{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 49,
  "lineage": "03663aa1-f9cf-71de-ca61-5cd98022d959",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "snap",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0779c82fbb81e731c",
            "arn": "arn:aws:ec2:ap-southeast-1:681696217554:instance/i-005271127e83c13f3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-airflow-instance-profile",
            "id": "i-005271127e83c13f3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "19963myserver",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07edfb07ef1026880"
              }
            ],
            "primary_network_interface_id": "eni-07edfb07ef1026880",
            "private_dns": "ip-10-0-0-43.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.43",
            "public_ip": "3.1.200.49",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f3f8a6b9f6eafc09",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0590655c4e155515b",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b05a79e728d616c6"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "key_name"
              }
            ]
          ],
          "dependencies": [
            "aws_iam_instance_profile.ec2_airflow_profile",
            "aws_iam_role.ec2_airflow_role",
            "aws_security_group.ec2",
            "aws_subnet.bastion",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:681696217554:internet-gateway/igw-0eb05b3db62ac4152",
            "id": "igw-0eb05b3db62ac4152",
            "owner_id": "681696217554",
            "region": "ap-southeast-1",
            "vpc_id": "vpc-0b0a20d3217ff6bc6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:681696217554:route-table/rtb-09725f5406907e928",
            "id": "rtb-09725f5406907e928",
            "owner_id": "681696217554",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb05b3db62ac4152",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b0a20d3217ff6bc6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efe5f520e24576a6",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-09725f5406907e928",
            "subnet_id": "subnet-0590655c4e155515b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.bastion",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:681696217554:security-group/sg-0b05a79e728d616c6",
            "description": "Security group for RDS",
            "egress": [],
            "id": "sg-0b05a79e728d616c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lambda_and_rds",
            "name_prefix": "",
            "owner_id": "681696217554",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "leadgen_ec2"
            },
            "tags_all": {
              "Name": "leadgen_ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0a20d3217ff6bc6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:681696217554:security-group/sg-0fb09a09283205d3a",
            "description": "Security group for Lambda",
            "egress": [],
            "id": "sg-0fb09a09283205d3a",
            "ingress": [],
            "name": "lambda",
            "name_prefix": "",
            "owner_id": "681696217554",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "leadgen_lambda"
            },
            "tags_all": {
              "Name": "leadgen_lambda"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0a20d3217ff6bc6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:681696217554:security-group/sg-0f773a3bd41f0c231",
            "description": "Security group for RDS",
            "egress": [],
            "id": "sg-0f773a3bd41f0c231",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b05a79e728d616c6",
                  "sg-0fb09a09283205d3a"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds",
            "name_prefix": "",
            "owner_id": "681696217554",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "leadgen_rds"
            },
            "tags_all": {
              "Name": "leadgen_rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0a20d3217ff6bc6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:681696217554:subnet/subnet-0590655c4e155515b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0590655c4e155515b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "681696217554",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "subnet2"
            },
            "tags_all": {
              "Name": "subnet2"
            },
            "vpc_id": "vpc-0b0a20d3217ff6bc6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:681696217554:subnet/subnet-0ade452041a3a9a22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ade452041a3a9a22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "681696217554",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "subnet1"
            },
            "tags_all": {
              "Name": "subnet1"
            },
            "vpc_id": "vpc-0b0a20d3217ff6bc6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:681696217554:subnet/subnet-0d7349dd0b04cd712",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7349dd0b04cd712",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "681696217554",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "subnet3"
            },
            "tags_all": {
              "Name": "subnet3"
            },
            "vpc_id": "vpc-0b0a20d3217ff6bc6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:681696217554:vpc/vpc-0b0a20d3217ff6bc6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0b700ce7df2ba74d0",
            "default_route_table_id": "rtb-020ed6235a97ffa84",
            "default_security_group_id": "sg-0e78bab40efda7062",
            "dhcp_options_id": "dopt-0cc0ed13c729d8bcd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b0a20d3217ff6bc6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-020ed6235a97ffa84",
            "owner_id": "681696217554",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "leadgen"
            },
            "tags_all": {
              "Name": "leadgen"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_to_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:681696217554:security-group-rule/sgr-0cf5f8c48c2512f69",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-0cf5f8c48c2512f69",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0b05a79e728d616c6",
            "region": "ap-southeast-1",
            "security_group_id": "sg-0f773a3bd41f0c231",
            "security_group_rule_id": "sgr-0cf5f8c48c2512f69",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2",
            "aws_security_group.rds",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "lambda_to_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:681696217554:security-group-rule/sgr-050a9ee4564b521a8",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-050a9ee4564b521a8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0fb09a09283205d3a",
            "region": "ap-southeast-1",
            "security_group_id": "sg-0f773a3bd41f0c231",
            "security_group_rule_id": "sgr-050a9ee4564b521a8",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lambda",
            "aws_security_group.rds",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "public_to_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:681696217554:security-group-rule/sgr-03ae31ceaf7a834c4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-03ae31ceaf7a834c4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-southeast-1",
            "security_group_id": "sg-0b05a79e728d616c6",
            "security_group_rule_id": "sgr-03ae31ceaf7a834c4",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}